--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
           <!-- settings icon / functionality -->
           <!-- if our user object has admin rights, then show this -->
-          <li v-if=user.isAdmin>
+          <li v-if=user.isadmin>
             <i @click="setUserPrefs" class="fas fa-cog" role="button"></i>
           </li>
           <!-- end user settings -->
@@ -58,7 +58,7 @@
       <i>Click on a poster to preview the movie!</i>
     </p>
 
-    <section class="hidden-movies" :class="{'show-movie' : showDetails }"> hidden-movies
+    <section class="hidden-movies" :class="{'show-movie' : showDetails }"> 
       <h3 class="movie-title">{{ videotitle }}</h3>
       <video :src="'video/' + videosource" autoplay controls></video>
       <div class="movie-details">
